// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`archive roundtrip should pack a directory into a volume 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <sandbox>/source",
    "Pack destination: <sandbox>/packed",
    "Wrote <sandbox>/packed/testdata.db",
    "Packed 8 file(s) into 1 volume(s), took <duration>",
    "Summary: 8 compressed, 0 stored, 0 aliased, 0 skipped",
    "Size: 8.68 KB source, 3.98 KB written",
  ],
}
`;

exports[`archive roundtrip should report without writing in dry mode 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpack in dry mode",
    "Unpack source: <sandbox>/packed/testdata.db",
    "Unpack destination: <sandbox>/dry",
    "Summary: 1 archive(s), 11 file(s), 3.65 KB compressed, 8.68 KB real",
    "Unpacking files, parallel 32",
  ],
}
`;

exports[`archive roundtrip should unpack the volume 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpack source: <sandbox>/packed/testdata.db",
    "Unpack destination: <sandbox>/unpacked",
    "Summary: 1 archive(s), 11 file(s), 3.65 KB compressed, 8.68 KB real",
    "Unpacking files, parallel 32",
    "Unpacked archive, took <duration> (preparation <duration>, unpack <duration>)",
  ],
}
`;

exports[`archive roundtrip should write the expected files 1`] = `
[
  {
    "path": "packed/testdata.db",
    "sha256": "42b004762da3897ca1fa519616401bdb0b96ec5294cdb9eeda2a1ea4f260b6f6",
    "size": 4071,
  },
  {
    "path": "source/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "source/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "source/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "source/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "source/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "source/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "source/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "source/ui/textures_descr/ui_test_sheet.xml",
    "sha256": "44329d941bf367bbd107efb9eb255aa12752cb550d3b99d7b88a2d1d91090012",
    "size": 352,
  },
  {
    "path": "unpacked/gamedata/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "unpacked/gamedata/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "unpacked/gamedata/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "unpacked/gamedata/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "unpacked/gamedata/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "unpacked/gamedata/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "unpacked/gamedata/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "unpacked/gamedata/ui/textures_descr/ui_test_sheet.xml",
    "sha256": "44329d941bf367bbd107efb9eb255aa12752cb550d3b99d7b88a2d1d91090012",
    "size": 352,
  },
]
`;
